--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <hr class="border-secondary">
     <!-- copyright -->
     <p class="text-center text-secondary small m-0 mt-3">
-      ©2025 Kelompok 2 X6
+      "Menjadi Pemimpin yang Peduli, Kreatif, dan Berwawasan Global"
     </p>
   </div>
 </footer>
@@ -114,3 +114,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
