Fix HTML structure and content in acticle.html

--- a/acticle.html
+++ b/acticle.html
@@ -128,7 +128,7 @@
     <hr class="border-secondary">
     <!-- copyright -->
     <p class="text-center text-secondary small m-0 mt-3">
-      ©2025 Kelompok 2 X6
+      "Menjadi Pemimpin yang Peduli, Kreatif, dan Berwawasan Global"
     </p>
   </div>
 </footer>
@@ -139,4 +139,5 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
   </body>
+
 </html>
