--- a/hukum.html
+++ b/hukum.html
@@ -77,7 +77,7 @@
     <hr class="border-secondary">
     <!-- copyright -->
     <p class="text-center text-secondary small m-0 mt-3">
-      ©2025 Kelompok 2 X6
+      "Menjadi Pemimpin yang Peduli, Kreatif, dan Berwawasan Global"
     </p>
   </div>
 </footer>
@@ -86,3 +86,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
