--- a/video.html
+++ b/video.html
@@ -87,7 +87,7 @@
     <hr class="border-secondary">
     <!-- copyright -->
     <p class="text-center text-secondary small m-0 mt-3">
-      ©2025 Kelompok 2 X6
+      "Menjadi Pemimpin yang Peduli, Kreatif, dan Berwawasan Global"
     </p>
   </div>
 </footer>
@@ -97,3 +97,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
