--- a/profile.html
+++ b/profile.html
@@ -131,10 +131,11 @@
     <hr class="border-secondary">
     <!-- copyright -->
     <p class="text-center text-secondary small m-0 mt-3">
-      ©2025 Kelompok 2 X6
+      "Menjadi Pemimpin yang Peduli, Kreatif, dan Berwawasan Global"
     </p>
   </div>
 </footer>
 </section>
   </body>
+
 </html>
