--- a/hukum.html
+++ b/hukum.html
@@ -53,7 +53,7 @@
         <br><p style="margin-left: 18.5rem;">Plagiarisme menunjukkan bagaimana pelanggaran akademik dapat menyentuh ranah hak warga negara, terutama ketika menyangkut kepemilikan intelektual. Hal ini berhubungan dengan UUD NRI 1945, dalam UUD 1945 Pasal 28G ayat (1). Pasal 28G ayat (1) berbunyi “Setiap orang berhak atas perlindungan diri pribadi, keluarga, kehormatan, martabat, dan harta benda yang berada di bawah kekuasaannya, serta berhak atas rasa aman dan perlindungan dari ancaman ketakutan untuk berbuat atau tidak berbuat sesuatu yang merupakan hak asasi.”
           <br><br>Pasal ini mencakupi perlindungan warga negara dari berbagai hal ancaman, salah satunya plagiasi karya milik sendiri karena karya cipta termasuk harta benda yang patut dilindungi. Ditegaskan bahwa kita tidak diperbolehkan untuk mengambil hak milik orang lain karena hal itu melanggar syarat ini. Sebaliknya, korban atau saksi dihimbau untuk melaporkan segala wujud ketidakadilan atau kecerobohan ini. Seterusnya, pelaku harus berganggung jawab atas konsekuensi yang diberikan kepadanya.</p>
         <p style="margin-left: 18.5rem;">Selain UUD 1945, adapun hukum lain seperti KUHP Pasal 380. Pasal ini mengatur mengenai tindakan pemalsuan nama atau tanda atas karya cipta, seperti karya kesusastraan, keilmuan, kesenian, atau kerajinan. Pelaku dapat disanksi penjara selama 2 tahun 8 bulan atau denda paling banyak Rp 5.000. Contoh kasus yang bisa melibatkan KUHP Lama Pasal 380 yakni plagiasi sebuah karya ilmiah dan mengakuinya sebagai milik sendiri.</p>
-        <p style="margin-left: 18.5rem;">Lalu, bagaimana peran kita sebagai warna negara Indonesia dalam hal plagiarisme ini? Pertama, kita dapat mencantumkan sumber kutipan secara benar. Kedua, adalah melalui sekolah, terutama PKN dan IPS. Kita dapat mempelajari undang-undang serta pertimbangan moral mengenai undang-undang tersebut. Walaupun sudah tidak sekolah lagi, kita memiliki kewajiban untuk menaati undang-undang dan bertanggung jawab untuk tidak melanggarnya, apalagi plagiarisme dan mencuri yang tertera pada UUD.  </p>
+        <p style="margin-left: 18.5rem;">Lalu, bagaimana peran kita sebagai warga negara Indonesia dalam hal plagiarisme ini? Pertama, kita dapat mencantumkan sumber kutipan dengan benar. Kedua, adalah melalui sekolah, terutama PKN dan IPS. Kita dapat mempelajari undang-undang serta pertimbangan moral mengenai undang-undang tersebut. Walaupun sudah tidak sekolah lagi, kita memiliki kewajiban untuk menaati undang-undang dan bertanggung jawab untuk tidak melanggarnya, apalagi plagiarisme dan mencuri yang tertera pada UUD.  </p>
     </section>
     
 <!-- footer -->
@@ -86,4 +86,5 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
